# LINE-Bot-Template

./: .gitignore  Dockerfile  README.md  app.ini  boot.sh  main.py  pyproject.toml  requirements.txt  setup.cfg  test.sh
bot/: __init__.py
tests/: test.coveragerc  test_bot_api.py
